add devise; update models; add databasse_cleaner for tests

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,9 @@ AllCops:
   Exclude:
     - bin/setup
     - bin/update
+    - config/initializers/*
+    - db/*
+    - db/migrate/*
 
 Rails:
   Enabled: true
